--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,4 +8,7 @@ cmds = [
 ]
 
 [start]
-cmd = "gunicorn app:app --bind 0.0.0.0:$PORT" 
+cmd = "gunicorn app:app --bind 0.0.0.0:$PORT"
+
+[variables]
+PORT = "5050" 
