--- a/railway.toml
+++ b/railway.toml
@@ -4,7 +4,7 @@ buildCommand = "pip install -r requirements.txt"
 
 [deploy]
 startCommand = "gunicorn app:app"
-healthcheckPath = "/"
+healthcheckPath = "/components"
 healthcheckTimeout = 100
 restartPolicyType = "on_failure"
 
